Added large prime generation and improved multiplication algorithm Added more tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,11 @@ project(encrypt)
 set(CMAKE_CXX_STANDARD 14)
 
 set(PROJECT_TEST ${PROJECT_NAME}_test)
+set(PROJECT_SYS_TEST ${PROJECT_NAME}_sys_test)
 
 set(SOURCE_FILES include/encrypt.h src/encrypt.cpp include/BigInteger.h include/keyGenerator.h include/safeRandom.h
         src/safeRandom.cpp)
-set(TEST_FILES test/testMain.cpp test/test_BigInteger.cpp test/test_BigIntegerAlgorithms.cpp)
+set(TEST_FILES test/unitTestMain.cpp test/test_BigInteger.cpp test/test_BigIntegerAlgorithms.cpp test/test_keyGenerator.cpp)
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/googletest gtest-build)
 include_directories(
@@ -17,5 +18,6 @@ include_directories(
 add_library(${PROJECT_NAME} ${SOURCE_FILES})
 
 add_executable(${PROJECT_TEST} ${SOURCE_FILES} ${TEST_FILES})
+add_executable(${PROJECT_SYS_TEST} test/systemTestMain.cpp ${SOURCE_FILES})
 
 target_link_libraries(${PROJECT_TEST} gtest gtest_main gmock gmock_main)
