Ported for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,19 +10,45 @@ set(SOURCE_FILES include/encrypt.h src/encrypt.cpp include/BigInteger.h include/
         src/safeRandom.cpp include/key.h src/key.cpp src/aes.cpp include/aes.h src/sha.cpp include/sha.h src/authenticate.cpp include/authenticate.h)
 set(TEST_FILES test/unitTestMain.cpp test/test_BigInteger.cpp test/test_BigIntegerAlgorithms.cpp test/test_keyGenerator.cpp)
 
+if (WIN32)
+
+set(CURL_LIBRARY "-lcurl")
+set(CURL_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../curl-7.71.1/include)
+
+set(JSON_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../json/include)
+
+include_directories(
+    ${CURL_INCLUDE_DIRS}
+    ${JSON_INCLUDE_DIRS}
+)
+
+else ()
+
 find_package(CURL REQUIRED)
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/googletest gtest-build)
 include_directories(
         ${PROJECT_SOURCE_DIR}/lib/googletest/googletest
         ${PROJECT_SOURCE_DIR}/lib/googletest/googlemock
-        PRIVATE ${CURL_INCLUDE_DIRS}
+        ${CURL_INCLUDE_DIRS}
 )
+
+endif()
+
 add_library(${PROJECT_NAME} ${SOURCE_FILES})
 
 add_executable(${PROJECT_TEST} ${SOURCE_FILES} ${TEST_FILES})
 add_executable(${PROJECT_SYS_TEST} test/systemTestMain.cpp ${SOURCE_FILES})
 
+if (WIN32)
+
+target_link_libraries(${PROJECT_SYS_TEST} curl wincrypt)
+target_link_libraries(${PROJECT_NAME} curl wincrypt)
+
+else ()
+
 target_link_libraries(${PROJECT_SYS_TEST} curl)
 target_link_libraries(${PROJECT_NAME} curl)
 target_link_libraries(${PROJECT_TEST} gtest gtest_main gmock gmock_main curl)
+
+endif ()
