--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -1,5 +1,4 @@
 ﻿{
-  // See https://go.microsoft.com//fwlink//?linkid=834763 for more information about this file.
   "configurations": [
     {
       "name": "x64-Debug",
@@ -10,7 +9,108 @@
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
-      "ctestCommandArgs": ""
+      "ctestCommandArgs": "",
+      "variables": [
+        {
+          "name": "CURL_LIBRARY",
+          "value": "D:/Libraries/curl/${name}/lib/libcurl_a_debug.lib",
+          "type": "FILEPATH"
+        },
+        {
+          "name": "CURL_INCLUDE_DIRS",
+          "value": "D:/Libraries/curl/${name}/include",
+          "type": "PATH"
+        },
+        {
+          "name": "JSON_INCLUDE_DIRS",
+          "value": "D:/Libraries/json/include",
+          "type": "PATH"
+        }
+      ]
+    },
+    {
+      "name": "x86-Debug",
+      "generator": "Ninja",
+      "configurationType": "Debug",
+      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "installRoot": "${projectDir}\\out\\install\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "inheritEnvironments": [ "msvc_x86" ],
+      "variables": [
+        {
+          "name": "CURL_LIBRARY",
+          "value": "D:/Libraries/curl/${name}/lib/libcurl_a_debug.lib",
+          "type": "FILEPATH"
+        },
+        {
+          "name": "CURL_INCLUDE_DIRS",
+          "value": "D:/Libraries/curl/${name}/include",
+          "type": "PATH"
+        },
+        {
+          "name": "JSON_INCLUDE_DIRS",
+          "value": "D:/Libraries/json/include",
+          "type": "PATH"
+        }
+      ]
+    },
+    {
+      "name": "x86-Release",
+      "generator": "Ninja",
+      "configurationType": "RelWithDebInfo",
+      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "installRoot": "${projectDir}\\out\\install\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "inheritEnvironments": [ "msvc_x86" ],
+      "variables": [
+        {
+          "name": "CURL_LIBRARY",
+          "value": "D:/Libraries/curl/${name}/lib/libcurl_a.lib",
+          "type": "FILEPATH"
+        },
+        {
+          "name": "CURL_INCLUDE_DIRS",
+          "value": "D:/Libraries/curl/${name}/include",
+          "type": "PATH"
+        },
+        {
+          "name": "JSON_INCLUDE_DIRS",
+          "value": "D:/Libraries/json/include",
+          "type": "PATH"
+        }
+      ]
+    },
+    {
+      "name": "x64-Release",
+      "generator": "Ninja",
+      "configurationType": "RelWithDebInfo",
+      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "installRoot": "${projectDir}\\out\\install\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "inheritEnvironments": [ "msvc_x64_x64" ],
+      "variables": [
+        {
+          "name": "CURL_LIBRARY",
+          "value": "D:/Libraries/curl/${name}/lib/libcurl_a.lib",
+          "type": "FILEPATH"
+        },
+        {
+          "name": "CURL_INCLUDE_DIRS",
+          "value": "D:/Libraries/curl/${name}/include",
+          "type": "PATH"
+        },
+        {
+          "name": "JSON_INCLUDE_DIRS",
+          "value": "D:/Libraries/json/include",
+          "type": "PATH"
+        }
+      ]
     }
   ]
 }
