--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-﻿################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
-
-/build/lib
-/out/build
-/.vs
+﻿*
+!.gitignore
+!CMakeLists.txt
+!CMakeSettings.jsom
+!LICENSE
+!README.md
+!include
+!include/*
+!src
+!src/*
